--- a/playwright/index.html
+++ b/playwright/index.html
@@ -17,6 +17,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/playwright/index.ts"></script>
+    <script type="module" src="./index.ts"></script>
   </body>
 </html>
